fix: icons clickable

--- a/EMS/core-bundle/assets/css/_ems.scss
+++ b/EMS/core-bundle/assets/css/_ems.scss
@@ -167,3 +167,7 @@ div.core-js-progress {
 
   & i { padding-right: 10px;}
 }
+
+button > * {
+  pointer-events: none; /* icons clickable inside button, js using event.target */
+}
