fix: buttonLabel overwrite

--- a/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
@@ -91,35 +91,29 @@
 {%- endblock jmn_item_title -%}
 
 {%- block jmn_button_item_edit -%}
-    {% set buttonLabel = buttonLabel|default('Edit') %}
-    <button class="jmn-btn-edit" data-modal-size="md">{{ buttonLabel }}</button>
+    <button class="jmn-btn-edit" data-modal-size="md">{{ buttonLabel|default('Edit') }}</button>
 {%- endblock jmn_button_item_edit -%}
 
 {%- block jmn_button_item_delete -%}
-    {% set buttonLabel = buttonLabel|default('Delete') %}
-    <button class="jmn-btn-delete">{{ buttonLabel }}</button>
+    <button class="jmn-btn-delete">{{ buttonLabel|default('Delete') }}</button>
 {%- endblock jmn_button_item_delete -%}
 
 {%- block jmn_button_item_move -%}
-    {% set buttonLabel = buttonLabel|default('Move') %}
-    <button class="btn btn-sm btn-default jmn-btn-move">{{ buttonLabel }}</button>
+    <button class="btn btn-sm btn-default jmn-btn-move">{{ buttonLabel|default('Move') }}</button>
 {%- endblock jmn_button_item_move -%}
 
 {%- block jmn_button_item_view -%}
-    {% set buttonLabel = buttonLabel|default('View') %}
-    <button class="jmn-btn-view" data-modal-size="md">View</button>
+    <button class="jmn-btn-view" data-modal-size="md">{{ buttonLabel|default('View') }}</button>
 {%- endblock jmn_button_item_view -%}
 
 {%- block jmn_button_item_add -%}
-    {% set buttonLabel = buttonLabel|default("New #{addNode.type}") %}
     <button class="jmn-btn-add" data-add="{{ addNode.id }}" data-modal-size="md">
         {% if addNode.icon %}<i class="{{ addNode.icon }}"></i>{% endif %}
-        {{ buttonLabel }}
+        {{ buttonLabel|default("New #{addNode.type}") }}
     </button>
 {%- endblock jmn_button_item_add -%}
 
 {%- block jmn_button_add -%}
-    {% set buttonLabel = buttonLabel|default('Add') %}
     {% set node = node|default(config.nodes.root) %}
     {% set addNodes = config.nodes.children(node) %}
     {% set addMenu = template.block('jmn_button_add_menu', _context)|raw %}
@@ -127,7 +121,7 @@
     {% if addNodes|length > 0 or addMenu|length > 0 %}
         <div class="btn-group btn-group-sm">
             <button type="button" class="btn btn-sm btn-default dropdown-toggle jmn-dropdown jmn-dropdown-add" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                {{ buttonLabel }}
+                {{ buttonLabel|default('Add') }}
             </button>
             <ul class="dropdown-menu pull-right">
                 {{ addMenu|raw }}
