feat: bs3 to bs5

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/admin-form/reorder.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/admin-form/reorder.html.twig
@@ -4,11 +4,11 @@
 {% block title %}{{ 'form.reorder.title'|trans({'%label%': entity.label}) }}{% endblock %}
 
 {% block breadcrumb_items %}<li class="breadcrumb-item active">{{ block('title') }}</li>{% endblock breadcrumb_items %}
-{# syv: blind fix / to check #}
+
 {% block body %}
 <div class="row">
 	<div class="col-md-12">
-		<div class="card card-{{ theme_color }} card-outline border-0">
+		<div class="card card-light">
             {{ form_start(form) }}
 				<div class="card-body p-0">
 					<ol class="nested-sortable vertical" id="root-list" data-nested-max-level="15" data-nested-is-tree="true">
