--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/draft-in-progress.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/draft-in-progress.html.twig
@@ -6,7 +6,7 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><i class="fa fa-fire"></i> {{ 'revision.draft-in-progress.breadcrumb'|trans({'%contentType%': contentType.pluralName}) }}</li>
+		<li class="breadcrumb-item"><i class="fa fa-fire"></i> {{ 'revision.draft-in-progress.breadcrumb'|trans({'%contentType%': contentType.pluralName}) }}</li>
 	</ol>
 {% endblock %}
 
