--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/default/documentation.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/default/documentation.html.twig
@@ -4,8 +4,8 @@
 {% block pagetitle %}{{ 'Documentation'|trans }}{% endblock %}
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><i class="fa fa-book"></i> {{ 'Documentation'|trans }}</li>
-   	</ol>
+		<li class="breadcrumb-item"><i class="fa fa-book"></i> {{ 'Documentation'|trans }}</li>
+	</ol>
 {% endblock %}
 
 {% block body %}
