--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/no-nodes-available.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/no-nodes-available.html.twig
@@ -5,10 +5,10 @@
 {% block pagetitle %}No node available{% endblock %}
 {% block subtitle %}<small>Something goes wrong</small>{% endblock %}
 {% block body %}
-<div class="col-md-12">
-	<div class="box box box-solid">
-		<div class="box-header with-border bg-red">
-			<h3 class="box-title">
+<div class="col-12">
+	<div class="card card-light">
+		<div class="card-header bg-red">
+			<h3 class="card-title">
 				<i class="icon fa fa-ban fa-2x"></i>  No node available for the following cluster
 			</h3>
 			<ul>
