--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/add.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/add.html.twig
@@ -9,20 +9,17 @@
 
 <div class="row">
 	<div class="col-md-6">
-		<div class="box ">
-			<div class="box-header with-border">
-				<i class="fa fa-warning"></i>
-				<h3 class="box-title">Notice</h3>
+		<div class="card card-warning card-outline">
+			<div class="card-header">
+				<h3 class="card-title"><i class="fa fa-warning"></i> Notice</h3>
 			</div>
 			<!-- /.box-header -->
-			<div class="box-body">
+			<div class="card-body">
 				<p>
 					{{ 'This operation will not index a new object ‘<em>%content_type%</em>’ immediately. It will start a new draft without any previous revision. <strong>This draft will not be visible</strong> in any environment <strong>until it has been finalized for the first time</strong>. This means you will not be able to see it in any list view (such as the index, map, calendar...), but all drafts in progress can be found in the ‘Draft in progress’ section.'|trans({ '%content_type%':contentType.name })|raw }}
-
 				</p>
 				<p>
 					{{ 'About the <strong>object unique identifier</strong>: you are free to specify one (provided it has not been taken yet, of course). If you leave it <strong>empty</strong>, an object unique identifier <strong>will be generated</strong> during the save. It is not possible to update the object unique identifier later.'|trans({ })|raw }}
-
 				</p>
 			</div>
 			<!-- /.box-body -->
@@ -30,20 +27,20 @@
 	</div>
 	<div class="col-md-6">
 		<!-- general form elements -->
-		<div class="box box-primary">
-			<div class="box-header with-border">
-				<h3 class="box-title">New {{ contentType.name }}</h3>
+		<div class="card card-{{ theme_color }} card-outline">
+			<div class="card-header">
+				<h3 class="card-title">New {{ contentType.name }}</h3>
 			</div>
 			<!-- /.box-header -->
 			<!-- form start -->
 			{{ form_start(form) }}
 
-				<div class="box-body">
+				<div class="card-body">
 					{{ form_row(form.ouuid) }}
 
 				</div>
 				<!-- /.box-body -->
-				<div class="box-footer">
+				<div class="card-footer">
 					{{ form_widget(form.save) }}
 				</div>
 			{{ form_end(form) }}
