--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/custom-view.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/custom-view.html.twig
@@ -27,12 +27,12 @@
 {% block body %}
 {% import "@EMSCore/macros/data-field-type.html.twig" as macros %}
 <div class="row">
-	<div class="col-xs-12">
-		<div class="box">
-			<div class="box-header no-print">
-				<h3 class="box-title">View {{ template.label }}</h3>
+	<div class="col-12">
+		<div class="card card-{{ theme_color }} card-outline">
+			<div class="card-header d-print-none">
+				<h3 class="card-title">View {{ template.label }}</h3>
 			</div>
-			<div class="box-body">
+			<div class="card-body">
 				{% if template.renderOption in [constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::EMBED'), constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::EXPORT'), constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::PDF')] %}
 					{{ template.body|generate_from_template({
 						environment: environment,
@@ -54,38 +54,38 @@
 				{% endif %}
 			</div>
 			<!-- /.box-body -->
-			<div class="box-footer no-print">
+			<div class="card-footer d-print-none">
                 {% include '@EMSAdminUI/bootstrap5/elements/object-toolbar.html.twig' with {
 					'object':  object,
 					'contentType': contentType,
 					'recursiveView': true
 				}%}
 
-				<div class="btn-toolbar pull-right" role="toolbar" >
+				<div class="btn-toolbar float-end" role="toolbar">
 					<div class="btn-group">
 						{% if template.renderOption is constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::PDF') %}
-                            {% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
-                                'url':  path(template.public?'ems_data_custom_template_public':'ems_data_custom_template_protected', {
-                                    'environmentName': environment.name ,
-                                    'templateId': template.id,
-                                    'ouuid': object.ouuid,
-                                    '_download': true}),
-                                'label': 'Download PDF',
-                                'icon': 'file-pdf-o',
-                                'target': '_blank'
-                            }%}
+							{% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
+								'url':  path(template.public?'ems_data_custom_template_public':'ems_data_custom_template_protected', {
+									'environmentName': environment.name ,
+									'templateId': template.id,
+									'ouuid': object.ouuid,
+									'_download': true}),
+								'label': 'Download PDF',
+								'icon': 'file-pdf-o',
+								'target': '_blank'
+							} %}
 						{% endif %}
 						{% if template.body and template.renderOption is constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::EXPORT') %}
-                            {% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
+							{% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
 								'url':  path(template.public?'ems_data_custom_template_public':'ems_data_custom_template_protected', {
-										'environmentName': environment.name ,
-										'templateId': template.id,
-										'ouuid': object.ouuid,
-										'_download': true}),
+									'environmentName': environment.name ,
+									'templateId': template.id,
+									'ouuid': object.ouuid,
+									'_download': true}),
 								'label': 'Download',
 								'icon': 'download',
 								'target': '_blank'
-							}%}
+							} %}
 						{% endif %}
 					</div>
 				</div>
