--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/edit-json-revision.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/edit-json-revision.html.twig
@@ -3,13 +3,13 @@
 
 {% block body %}
     <div class="row">
-        <div class="col-md-12">
-            <div class="box box-primary">
+        <div class="col-12">
+            <div class="card card-{{ theme_color }} card-outline">
                 {{ form_start(form) }}
-                <div class="box-body">
+                <div class="card-body">
                     {{ form_row(form.json) }}
                 </div>
-                <div class="box-footer">
+                <div class="card-footer">
                     {{ form_widget(form.save) }}
                 </div>
                 {{ form_end(form) }}
