--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/edit-revision.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/edit-revision.html.twig
@@ -5,7 +5,7 @@
 
 
 {% block body %}
-<div class="box box-primary" id="revision-primary-box"
+<div class="card card-{{ theme_color }} card-outline" id="revision-primary-box"
 	data-update-mode="
 		{%- if not revision.draft -%}
 			disabled
@@ -15,16 +15,16 @@
 			autoSave
 		{%- endif -%}"
 	data-ajax-update="{{ path('revision.ajaxupdate', { revisionId: revision.id })|e('html_attr') }}">
-	<div class="box-header with-border">
-		<h3 class="box-title text-{{ revision.contentType.color }}"><i class="{% if revision.contentType.icon %}{{ revision.contentType.icon }} {% else %} fa fa-question {% endif %} "></i>&nbsp;&nbsp;&nbsp;{{ revision.contentType.singularName }}</h3>
+	<div class="card-header">
+		<h3 class="card-title text-{{ revision.contentType.color }}"><i class="{% if revision.contentType.icon %}{{ revision.contentType.icon }} {% else %} fa fa-question {% endif %} "></i>&nbsp;&nbsp;&nbsp;{{ revision.contentType.singularName }}</h3>
 	</div>
 		{{ form_start(form) }}
-		<div class="box-body">
+		<div class="card-body">
     	    {{- form_errors(form) -}}
     	    {{- form_errors(form.data) -}}
 			{{ form_widget(form.data) }}
 		</div>
-		<div class="box-footer">
+		<div class="card-footer">
 			{% if revision.draft and form.publish is defined %}
 				{{ form_widget(form.publish) }}
 			{% endif %}
