--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/trash.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/trash.html.twig
@@ -9,19 +9,18 @@
 {% if revisions %}
 <div class="row">
 	<div class="col-md-12">
-		<div class="box ">
-			<div class="box-header with-border text-{{ contentType.color }}">
-				<i class=" {% if contentType.icon %}{{ contentType.icon }}{% else %}fa fa-book{% endif %}"></i>
-				<h3 class="box-title"> {{ contentType.pluralName }} in trash</h3>
+		<div class="card card-{{ theme_color }} card-outline">
+			<div class="card-header text-{{ contentType.color }}">
+				<h3 class="card-title"><i class=" {% if contentType.icon %}{{ contentType.icon }}{% else %}fa fa-book{% endif %}"></i> {{ contentType.pluralName }} in trash</h3>
 			</div>
 			<!-- /.box-header -->
-			<div class="box-body">
+			<div class="card-body">
 				<div class="table-responsive">
 				<table class="table table-condensed table-striped">
 					<tbody>
 						<tr>
 							<th class="text-center" style="width: 10px">{{ '#'|trans }}</th>
-                            {% if is_super() %}<th>{{ 'OUUID'|trans }}</th>{% endif %}
+							{% if is_super() %}<th>{{ 'OUUID'|trans }}</th>{% endif %}
 							<th>{{ 'Label'|trans }}</th>
 							<th>{{ 'Deleted by'|trans }}</th>
 							<th>{{ 'Last update'|trans }}</th>
@@ -30,7 +29,7 @@
 						{% for revision in revisions %}
 							<tr>
 								<td class="text-center">{{ loop.index }}.</td>
-                                {% if is_super() %}<td>{{ revision.ouuid }}</td>{% endif %}
+								{% if is_super() %}<td>{{ revision.ouuid }}</td>{% endif %}
 								<td>
 								{% if revision.contentType.labelField is defined and revision.rawData and attribute(revision.rawData, revision.contentType.labelField) is defined %}
 									{{ attribute(revision.rawData, revision.contentType.labelField) }}
@@ -45,7 +44,7 @@
 								<td>
 
 									<div class="btn-group">
-                                        {% include '@EMSAdminUI/bootstrap5/elements/post-button.html.twig' with {
+										{% include '@EMSAdminUI/bootstrap5/elements/post-button.html.twig' with {
 											'url': path('ems_data_put_back', {
 												'contentType': revision.contentType.id,
 												'ouuid': revision.ouuid
@@ -54,7 +53,7 @@
 											'label': 'Put back'|trans,
 											'icon': 'recycle'
 										}%}
-                                        {% include '@EMSAdminUI/bootstrap5/elements/post-button.html.twig' with {
+										{% include '@EMSAdminUI/bootstrap5/elements/post-button.html.twig' with {
 											'url': path('ems_data_empty_trash', {
 												'contentType': revision.contentType.id,
 												'ouuid': revision.ouuid
@@ -63,16 +62,13 @@
 											'label': 'Empty Trash'|trans,
 											'icon': 'trash'
 										}%}
-				                    </div>
-
-
+									</div>
 								</td>
 							</tr>
 						{% endfor %}
 					</tbody>
 				</table>
 				</div>
-
 			</div>
 			<!-- /.box-body -->
 		</div>
