--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/view-data.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/view-data.html.twig
@@ -19,17 +19,17 @@
 
 {% block body %}
     <div class="row raw-view">
-        <div class="col-xs-12">
-            <div class="box">
-                <div class="box-header">
-                    <h3 class="box-title">Recursif view</h3>
+        <div class="col-12">
+            <div class="card card-{{ theme_color }} card-outline">
+                <div class="card-header">
+                    <h3 class="card-title">Recursif view</h3>
                 </div>
-                <div class="box-body">
+                <div class="card-body">
                     <pre class="ems-code-editor" data-language="ace/mode/json"
                          data-them="ace/theme/chrome" data-max-lines="500">{{ object|json_encode(constant('JSON_PRETTY_PRINT')) }}</pre>
                 </div>
                 <!-- /.box-body -->
-                <div class="box-footer">
+                <div class="card-footer">
                     {% include '@EMSAdminUI/bootstrap5/elements/object-toolbar.html.twig' with {
                         'object':  object,
                         'contentType': contentType,
