--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/export-search.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/export-search.html.twig
@@ -10,15 +10,15 @@
 {% block body %}
     <div class="row">
         <div id="search-page" class="col-md-12">
-            <div class="box ">
-                <div class="box-header with-border">
+            <div class="card card-{{ theme_color }} card-outline">
+                <div class="card-header">
                     <h3>
                         <i class="glyphicon glyphicon-export"></i>
                         {{ 'views.elasticsearch.export-search.title'|trans }}
                     </h3>
                 </div>
                 {% for exportForm in exportForms %}
-                    <div class="box-body">
+                    <div class="card-body">
                         {{ form(exportForm) }}
                     </div>
                 {% endfor %}
