--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/save-search.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/save-search.html.twig
@@ -10,25 +10,25 @@
 
 {% block body %}
 <div class="row">
-	<div id="search-page" class="col-md-12">
+	<div id="search-page" class="col-12">
 
 		{{ form_start(form) }}
 
-			<div class="box ">
-				<div class="box-header with-border">
+			<div class="card card-{{ theme_color }} card-outline">
+				<div class="card-header">
 					<h3>
 						<i class="fa fa-search"></i> Preset search form
 					</h3>
 				</div>
-				<div class="box-body">
+				<div class="card-body">
 					<div class="row">
-						<div class="col-md-12">
+						<div class="col-12">
 							{{ form_row(form.name) }}
 						</div>
 					</div>
 				</div>
 
-				<div class="box-footer">
+				<div class="card-footer">
 					<div class="form-group">
 						<div class="btn-group">
 							{{ form_widget(form.save_search) }}
