--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/add.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/add.html.twig
@@ -8,13 +8,12 @@
 
 <div class="row">
 	<div class="col-md-6">
-		<div class="box ">
-			<div class="box-header with-border">
-				<i class="fa fa-warning"></i>
-				<h3 class="box-title">Notice</h3>
+		<div class="card card-warning card-outline">
+			<div class="card-header">
+				<h3 class="card-title"><i class="fa fa-warning"></i> Notice</h3>
 			</div>
 			<!-- /.box-header -->
-			<div class="box-body">
+			<div class="card-body">
 				<p>
 					This operation will create a new elastic search index with an alias pointing to it.
 				</p>
@@ -24,22 +23,20 @@
 	</div>
 	<div class="col-md-6">
 		<!-- general form elements -->
-		<div class="box box-primary">
-			<div class="box-header with-border">
-				<h3 class="box-title">New Environment</h3>
+		<div class="card card-{{ theme_color }} card-outline">
+			<div class="card-header">
+				<h3 class="card-title">New Environment</h3>
 			</div>
 			<!-- /.box-header -->
 			<!-- form start -->
 			{{ form_start(form) }}
-
-				<div class="box-body">
+				<div class="card-body">
 					{{ form_row(form.name) }}
 					{{ form_row(form.color) }}
 {# 					{{ form_row(form.managed) }}#}
-
 				</div>
 				<!-- /.box-body -->
-				<div class="box-footer">
+				<div class="card-footer">
 					{{ form_widget(form.save) }}
 				</div>
 			{{ form_end(form) }}
