--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/align.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/align.html.twig
@@ -57,9 +57,8 @@
 
 {% if results %}
 	<div class="col">
-		<div class="card">
+		<div class="card card-{{ theme_color }} card-outline">
       <div class="card-header">
-
       	{% set fromInMyCircles = environments[environment].circles|in_my_circles %}
       	{% set toInMyCircles = environments[withEnvironment].circles|in_my_circles %}
 
