--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/index.html.twig
@@ -5,10 +5,10 @@
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li>
+        <li class="breadcrumb-item">
             <i class="fa fa-database"></i> {{ 'view.environment.index.environment_breadcrumb'|trans }}
         </li>
-        <li>
+        <li class="breadcrumb-item active">
             {{ 'view.environment.index.index_breadcrumb'|trans }}
         </li>
     </ol>
@@ -17,31 +17,49 @@
 {% block body %}
 
     <div class="row">
-        <div class="col-md-12">
-            <div class="box ">
-                <div class="box-header with-border">
-                    <i class="fa fa-database"></i>
-                    <h3 class="box-title">{{ 'view.environment.index.local_environment_label'|trans }}</h3>
-                    <div class="btn-group  pull-right">
+        <div class="col-12">
+            <div class="card card-light">
+                <div class="card-header">
+                    <h3 class="card-title">Select your options</h3>
+                </div>
+                <!-- /.box-header -->
+                <!-- form start -->
+
+                <div class="card-body">
+                    toto
+                </div>
+                <!-- /.box-body -->
+                <div class="card-footer text-end">
+                    <div class="btn-group">
+                        <button type="submit" id="rebuild_index_rebuild" name="rebuild_index[rebuild]" class="btn btn-primary btn-sm "><span class="fa fa-recycle"></span>&nbsp;
+                            Rebuild
+                        </button>
+                    </div>
+                </div>
+                <!-- /.box-footer -->
+            </div>
+
+            <div class="card card-{{ theme_color }} card-outline">
+                <div class="card-header">
+                    <h3 class="card-title"><i class="fa fa-database"></i> {{ 'view.environment.index.local_environment_label'|trans }}</h3>
+                    <div class="btn-group float-end">
                         <a class="btn btn-xs btn-primary" href="{{ path('environment.add') }}">
                             <i class="fa fa-plus"></i> {{ 'view.environment.index.add_environment_button'|trans }}
                         </a>
-                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal"
-                                data-target="#environment_modal_reorder">
+                        <button type="button" class="btn btn-primary btn-xs" data-bs-toggle="modal" data-bs-target="#environment_modal_reorder">
                             <i class="fa fa-reorder"></i> {{ 'view.environment.index.reorder_button'|trans }}
                         </button>
                     </div>
-                    <div class="modal fade" id="environment_modal_reorder" tabindex="-1" role="dialog"
-                         aria-labelledby="myModalReorder">
+                    <div class="modal fade" id="environment_modal_reorder" tabindex="-1" role="dialog" aria-labelledby="myModalReorder">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
                                     <h4 class="modal-title" id="myModalReorderLabel">
                                         <strong>{{ 'view.environment.index.reorder_title'|trans }}</strong>
                                     </h4>
+                                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
                                 </div>
                                 {{ form_start(form) }}
                                 <div class="modal-body">
@@ -58,7 +76,7 @@
                                 <div class="modal-footer">
                                     <div class="btn-group">
                                         {{ form_widget(form.reorder) }}
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal">
+                                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
                                             <i class="fa fa-close"></i> {{ 'view.environment.index.close_modal_button'|trans }}
                                         </button>
                                     </div>
@@ -69,7 +87,7 @@
                     </div>
                 </div>
                 <!-- /.box-header -->
-                <div class="box-body">
+                <div class="card-body">
                     {% if environments|length == 0 %}
                         {{ 'view.environment.index.no_environment_yet'|trans }}
                     {% else %}
@@ -112,8 +130,8 @@
                                             <td>{{ environment.name }}</td>
                                             <td>{{ environment.alias }}</td>
                                             <td>
-                                                <button type="button" class="btn btn-default btn-sm" data-toggle="modal"
-                                                        data-target="#modal-environment-{{ environment.id }}">
+                                                <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
+                                                        data-bs-target="#modal-environment-{{ environment.id }}">
                                                     {{ 'view.environment.index.environment_index_count'|trans({'%count%': environment.indexes|length}) }}
                                                 </button>
                                             </td>
@@ -164,13 +182,12 @@
                 {% endif %}
             {% endfor %}
 
-            <div class="box ">
-                <div class="box-header with-border">
-                    <i class="fa fa-database"></i>
-                    <h3 class="box-title">{{ 'view.environment.index.external_environments_title'|trans }}</h3>
+            <div class="card card-{{ theme_color }} card-outline">
+                <div class="card-header">
+                    <h3 class="box-title"><i class="fa fa-database"></i> {{ 'view.environment.index.external_environments_title'|trans }}</h3>
                 </div>
                 <!-- /.box-header -->
-                <div class="box-body">
+                <div class="card-body">
                     {% if not found %}
                         {{ 'view.environment.index.no_external_environment_yet'|trans }}
                     {% else %}
@@ -198,8 +215,8 @@
                                             <td>{{ environment.name }}</td>
                                             <td>{{ environment.alias }}</td>
                                             <td>
-                                                <button type="button" class="btn btn-default btn-sm" data-toggle="modal"
-                                                        data-target="#modal-environment-{{ environment.id }}">
+                                                <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
+                                                        data-bs-target="#modal-environment-{{ environment.id }}">
                                                     {{ 'view.environment.index.environment_index_count'|trans({'%count%': environment.indexes|length}) }}
                                                 </button>
 
@@ -242,9 +259,8 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">×</span></button>
                                 <h4 class="modal-title">{{ 'view.environment.index.environment_indexes_modal_title'|trans({'%name%': environment.label}) }}</h4>
+                                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                             </div>
                             <div class="modal-body">
                                 <p>
@@ -258,8 +274,8 @@
                                     </ul>
                                 </p>
                             </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default pull-left" data-dismiss="modal">
+                            <div class="modal-footer text-left">
+                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">
                                     Close
                                 </button>
                             </div>
@@ -270,18 +286,17 @@
                 </div>
             {% endfor %}
 
-            <div class="box ">
-                <div class="box-header with-border">
-                    <i class="fa fa-code-fork"></i>
-                    <h3 class="box-title">{{ 'view.environment.index.managed_alias_title'|trans }}</h3>
-                    <div class="btn-group  pull-right">
+            <div class="card card-{{ theme_color }} card-outline">
+                <div class="card-header">
+                    <h3 class="card-title"><i class="fa fa-code-fork"></i> {{ 'view.environment.index.managed_alias_title'|trans }}</h3>
+                    <div class="btn-group float-end">
                         <a class="btn btn-xs btn-primary" href="{{ path('environment_add_managed_alias') }}">
                             <i class="fa fa-plus"></i> {{ 'view.environment.index.add_managed_alias_button'|trans }}
                         </a>
                     </div>
                 </div>
                 {% if managedAliases|length > 0 %}
-                    <div class="box-body">
+                    <div class="card-body">
                         <div class="table-responsive">
                             <table class="table table-condensed table-striped">
                                 <tbody>
@@ -343,17 +358,15 @@
 
         <div class="col-md-5">
 
-            <div class="box ">
-                <div class="box-header with-border">
-                    <i class="fa fa-database"></i>
-                    <h3 class="box-title">{{ 'view.environment.index.unreferenced_aliases_title'|trans }}</h3>
+            <div class="card card-{{ theme_color }} card-outline">
+                <div class="card-header">
+                    <h3 class="card-title"><i class="fa fa-database"></i> {{ 'view.environment.index.unreferenced_aliases_title'|trans }}</h3>
                 </div>
                 <!-- /.box-header -->
-                <div class="box-body">
+                <div class="card-body">
                     {% if unreferencedAliases|length == 0 %}
                         {{ 'view.environment.index.all_indexes_are_referenced'|trans }}
                     {% else %}
-
                         <div class="table-responsive">
                             <table class="table table-condensed table-striped">
                                 <tbody>
@@ -403,11 +416,10 @@
 
 
         <div class="col-md-7">
-            <div class="box ">
-                <div class="box-header with-border">
-                    <i class="fa fa-database"></i>
-                    <h3 class="box-title">{{ 'view.environment.index.orphan_index_title'|trans }}</h3>
-                    <div class="btn-group  pull-right">
+            <div class="card card-{{ theme_color }} card-outline">
+                <div class="card-header">
+                    <h3 class="card-title"><i class="fa fa-database"></i> {{ 'view.environment.index.orphan_index_title'|trans }}</h3>
+                    <div class="btn-group float-end">
                         {% include '@EMSAdminUI/bootstrap5/elements/post-button.html.twig' with {
                             'url': path('ems_delete_ophean_indexes', {}),
                             'message': 'view.environment.index.delete_all_ophan_indexes_confirm'|trans,
@@ -417,12 +429,10 @@
                     </div>
                 </div>
                 <!-- /.box-header -->
-                <div class="box-body">
-
+                <div class="card-body">
                     {% if orphanIndexes|length == 0 %}
                         {{ 'view.environment.index.there_is_no_orphan_index'|trans }}
                     {% else %}
-
                         <div class="table-responsive">
                             <table class="table table-condensed table-striped">
                                 <tbody>
