--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/rebuild.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/rebuild.html.twig
@@ -13,13 +13,12 @@
 {% block body %}
 <div class="row">
 	<div class="col-md-6">
-		<div class="box ">
-			<div class="box-header with-border">
-				<i class="fa fa-warning"></i>
-				<h3 class="box-title">Notice</h3>
+		<div class="card card-warning card-outline">
+			<div class="card-header">
+				<h3 class="card-title"><i class="fa fa-warning"></i> Notice</h3>
 			</div>
 			<!-- /.box-header -->
-			<div class="box-body">
+			<div class="card-body">
 				<p>
 					Be cautious, depending of the option selected some content in the search index may be lost.
 				</p>
@@ -28,19 +27,19 @@
 		</div>
 	</div>
 	<div class="col-md-6">
-		<div class="box box-info">
-			<div class="box-header with-border">
-				<h3 class="box-title">Select your options</h3>
+		<div class="card card-{{ theme_color }} card-outline">
+			<div class="card-header">
+				<h3 class="card-title">Select your options</h3>
 			</div>
 			<!-- /.box-header -->
 			<!-- form start -->
 			{{ form_start(form) }}
-				<div class="box-body">
+				<div class="card-body">
 					{{ form_row(form.option) }}
 				</div>
 				<!-- /.box-body -->
-				<div class="box-footer">
-					<div class="btn-group pull-right">
+				<div class="card-footer">
+					<div class="btn-group text-end">
 						{{ form_widget(form.rebuild) }}
 					</div>
 				</div>
