--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/view.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/view.html.twig
@@ -4,45 +4,44 @@
 {% block pagetitle %}View the environment {{environment.name}}{% endblock %}
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href={{ path('environment.index') }}><i class="fa fa-database"></i> Environments</a></li>
-   		<li class="active">View environment</li>
-   	</ol>
+		<li class="breadcrumb-item"><a href={{ path('environment.index') }}><i class="fa fa-database"></i> Environments</a></li>
+    <li class="breadcrumb-item active">View environment</li>
+  </ol>
 {% endblock %}
 
 {% block body %}
-
-<div class="box box-primary">
-            <div class="box-header with-border">
-              <h3 class="box-title">Elasticsearch information</h3>
+    <div class="card card-{{ theme_color }} card-outline">
+        <div class="card-header">
+            <h3 class="card-title">Elasticsearch information</h3>
+        </div>
+        <!-- /.box-header -->
+        <!-- form start -->
+        <form role="form">
+            <div class="card-body">
+                {% if info %}
+                    <pre class="ems-code-editor" data-language="ace/mode/json"
+                         data-theme="ace/theme/chrome" data-max-lines="300">{{ info|json_encode(constant('JSON_PRETTY_PRINT')) }}</pre>
+                {% else %}
+                    Elasticsearch index is missing !
+                {% endif %}
             </div>
-            <!-- /.box-header -->
-            <!-- form start -->
-            <form role="form">
-              <div class="box-body">
-                  {% if info %}
-                      <pre class="ems-code-editor" data-language="ace/mode/json"
-                           data-theme="ace/theme/chrome" data-max-lines="300">{{ info|json_encode(constant('JSON_PRETTY_PRINT')) }}</pre>
-					{% else %}
-						Elasticsearch index is missing !
-					{% endif %}
-              </div>
-              <!-- /.box-body -->
+            <!-- /.box-body -->
 
-              <div class="box-footer">
-                <div class="btn-group pull-right">
+            <div class="card-footer text-end">
+                <div class="btn-group">
                     {% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
-						'url': path('environment.index'),
-						'label': 'Close',
-						'icon': 'close'
-					}%}
+                        'url': path('environment.index'),
+                        'label': 'Close',
+                        'icon': 'close'
+                    } %}
                     {% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
-							'url': path('environment.edit', {'id': environment.id}),
-							'label': 'Edit',
-							'icon': 'pencil'
-						}%}
-				</div>
-              </div>
-            </form>
-          </div>
+                        'url': path('environment.edit', {'id': environment.id}),
+                        'label': 'Edit',
+                        'icon': 'pencil'
+                    } %}
+                </div>
+            </div>
+        </form>
+    </div>
 
 {% endblock %}
