fix(core/dataTable): only show x scrollbar when needed

--- a/EMS/core-bundle/src/Resources/views/datatable/dom.html.twig
+++ b/EMS/core-bundle/src/Resources/views/datatable/dom.html.twig
@@ -1,10 +1,8 @@
 {%- use '@EMSCore/form/forms.html.twig' -%}
 {% trans_default_domain 'EMSCoreBundle' %}
 
-
-<div class="table-responsive">
-    <table class="table table-condensed table-striped" data-datatable="{{ datatable.frontendOptions|json_encode|e('html_attr') }}">
-        <thead>
+<table class="table table-condensed table-striped" data-datatable="{{ datatable.frontendOptions|json_encode|e('html_attr') }}" style="width: 100%;">
+    <thead>
         <tr role="row">
             {% if datatable.supportsTableActions %}
                 <th class="fit" data-orderable="false" data-name="_checkbox">
@@ -25,8 +23,8 @@
                 <th class="nowrap" data-orderable="false">{{ 'table.index.column.actions'|trans }}</th>
             {% endif %}
         </tr>
-        </thead>
-        <tbody>
+    </thead>
+    <tbody>
         {% for line in datatable %}
             <tr>
                 {% if datatable.supportsTableActions %}
@@ -44,9 +42,8 @@
                 {% endif %}
             </tr>
         {%  endfor %}
-        </tbody>
-    </table>
-</div>
+    </tbody>
+</table>
 {% if datatable.supportsTableActions %}
     <div class="btn-group">
         {% for action in datatable.tableActions %}
